# XenSequencer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  keys.yml  plugin_editor.cpp  plugin_editor.h  plugin_processor.cpp  plugin_processor.h  user_keys.yml
data/chords/: chords.yml  user_chords.yml
data/demos/: by this river.xss  demo.xenseq  double note 2.json  empty.xenseq  in a landscape.xss
data/keys/: keys.yml  user_keys.yml
data/scales/: scales.yml  user_scales.yml
docs/: command_reference.md  keybindings.md  keybindings_reference.md  user_guide.md
include/xen/: actions.hpp  active_sessions.hpp  active_sessions.old.hpp  chord.hpp  clock.hpp  command.hpp  command_history.hpp  constants.hpp  copy_paste.hpp  double_buffer.hpp  guide_text.hpp  input_mode.hpp  instance_directory.hpp  inter_process_relay.hpp  invoke.hpp  key_core.hpp  lock_free_optional.hpp  lock_free_queue.hpp  message_level.hpp  midi.hpp  midi_engine.hpp  modulator.hpp  modulators.hpp  parse_args.hpp  plugin_processor.hpp  scale.hpp  selection.hpp  serialize.hpp  serialize_state.hpp  shared_state.hpp  signature.hpp  state.hpp  string_manip.hpp  timeline.hpp  user_directory.hpp  utility.hpp  xen_command_core.old.hpp  xen_command_tree.hpp  xen_editor.hpp  xen_processor.hpp  (+1 more)
include/xen/gui/: accordion.hpp  active_sessions.hpp  active_sessions_list.hpp  active_sessions_view.hpp  bg_sequence.hpp  bottom_bar.hpp  cell.hpp  center_component.hpp  color_ids.hpp  command_bar.hpp  custom_look_and_feel.hpp  directory_list_box.hpp  directory_view.hpp  file_button.hpp  focusable_component.hpp  fonts.hpp  graph.hpp  heading.hpp  homogenous_row.hpp  library_view.hpp  mantissa_box.hpp  measure.hpp  measure_grid.hpp  message_log.hpp  modulation_pane.hpp  phrase.hpp  phrase_editor.hpp  plugin_window.hpp  react_web_view.hpp  sequence.hpp  sequence.old.hpp  sequence_bank.hpp  status_bar.hpp  themes.hpp  tile.hpp  timeline.hpp  title_bar.hpp  tuning.hpp  tuning_reference.hpp  xen_list_box.hpp  (+1 more)
include/xen/gui/utility/: dereference_iterator.hpp
react-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
react-ui/src/: App.css  App.tsx  index.css
react-ui/src/juce-shim/: index.d.ts
src/: actions.cpp  actions.hpp  active_sessions.cpp  active_sessions.old.cpp  chord.cpp  command.cpp  command.hpp  command_core.cpp  command_core.hpp  command_history.cpp  copy_paste.cpp  guide_text.cpp  input_mode.cpp  input_mode.hpp  instance_directory.cpp  inter_process_relay.cpp  key_core.cpp  key_core.hpp  main.cpp  message_level.cpp  message_type.hpp  midi.cpp  midi.hpp  midi_engine.cpp  modulator.cpp  modulators.cpp  parse_args.cpp  parse_args.hpp  plugin_editor.cpp  plugin_editor.hpp  plugin_processor.cpp  plugin_processor.hpp  scale.cpp  selection.cpp  selection.hpp  serialize.cpp  serialize_state.cpp  serialize_state.hpp  shared_state.cpp  signature.hpp  (+18 more)
src/gui/: accordion.cpp  active_sessions.cpp  active_sessions_list.cpp  active_sessions_view.cpp  bg_sequence.cpp  bottom_bar.cpp  cell.cpp  center_component.cpp  command_bar.cpp  command_bar.hpp  directory_list_box.cpp  directory_view.cpp  file_button.hpp  graph.cpp  heading.hpp  homogenous_row.hpp  library_view.cpp  mantissa_box.hpp  measure.hpp  message_log.cpp  modulation_pane.cpp  number_box.hpp  phrase.hpp  phrase_editor.hpp  plugin_window.cpp  plugin_window.hpp  react_web_view.cpp  sequence.cpp  sequence.hpp  sequence.old.cpp  sequence.old.hpp  sequence_bank.cpp  status_bar.cpp  status_bar.hpp  themes.cpp  tile.cpp  timeline.cpp  title_bar.cpp  tuning.hpp  tuning_reference.cpp  (+2 more)
src/gui/utility/: dereference_iterator.hpp
test/: command.test.cpp  command2.test.cpp  midi.test.cpp  utility.test.cpp
tools/: color_gradient.py  convert_themes.py  generate_measures.py  keys_to_md.py
tools/cmd_reference/: CMakeLists.txt  main.cpp
tools/cmd_reference/src/: main.cpp  make_command_reference.hpp
tools/keypress/: CMakeLists.txt
tools/keypress/src/: main.cpp
